# agentpluginui

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  version.h.in
cmake/: FindAthenaAgent.cmake
cmake/toolchain/: x86_64-w64-mingw32.cmake
src/: agent_plugin_ui.cpp  agent_plugin_ui.h  localserver.cpp  localserver.h
